# himitsu

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  DOLT_REMOTE.md  README.md  TODO.md  action.yml  bacon.toml  build.rs  flake.nix  justfile  key.txt  manifest
.beads/: config.yaml  dolt  dolt-wal  interactions.jsonl  issues.jsonl  metadata.json
.beads/.br_recovery/dolt.20260603_165700_007721320.bak/: config.yaml
.cursor/rules/: implementation-plan.mdc
.github/workflows/: opencode.yml  rust.yml  vhs.yml
.himitsu/: data.json
.himitsu/recipients/common/: self.pub
.omo/evidence/: task-1-build.txt  task-10-cross-store.txt  task-10-dollar1.txt  task-11-idempotent.txt  task-13-happy.txt  task-13-invalid-skip.txt  task-13-non-mutating.txt  task-2-build.txt  task-27-doctor.txt  task-28-doc.txt
.omo/notepads/remove-envs-replace-with-tags/: learnings.md
.omo/run-continuation/: ses_1ad7f40c5ffeJOu3FEdASxYamm.json
action/: entrypoint.sh
demo/: demo.cast  demo.nix  demo.sh  demo.tape  record.sh  tui-demo-setup.sh  tui-us-008.cast  tui-us-008.exp  tui-us-008.tape  tui-us-009.cast  tui-us-009.exp  tui-us-009.tape  tui-us-010-editor.sh  tui-us-010.cast  tui-us-010.exp  tui-us-010.tape  tui-us-011.cast  tui-us-011.exp  tui-us-011.tape  tui-us-012.cast  tui-us-012.exp  tui-us-012.tape  tui-us-013.cast  tui-us-013.exp  tui-us-013.tape
demo/partials/: browse.tape  cleanup.tape  config.tape  generate.tape  help.tape  init.tape  recipients.tape  secrets.tape  setup.tape  tui.tape
docs/: ARCHITECTURE.md  BACKENDS.md  IMPLEMENTATION_PLAN.md  SERVER_API.md  SHARING.md  USE_CASES.md  migrating-envs-to-tags.md  nix-integration.md  plan-serve.md
docs/adr/: 0001-keep-last-wins-collapse-in-file-generators.md
docs/mockups/project-context-ux/: index.html
nix/lib/: default.nix
proto/: commands.proto  config.proto  secrets.proto
rust/src/: build_info.rs  completions_cache.rs  error.rs  git.rs  lib.rs  main.rs  reference.rs  suggest.rs  test_env.rs
rust/src/agents/: prime.md
rust/src/cli/: alias.rs  check.rs  ci.rs  codegen.rs  completions.rs  context.rs  decrypt.rs  docs.rs  doctor.rs  duration.rs  encrypt.rs  exec.rs  export.rs  generate.rs  get.rs  git.rs  group.rs  import.rs  inbox.rs  init.rs  join.rs  keys.rs  ls.rs  migrate.rs  mod.rs  output_resolver.rs  prime.rs  read.rs  recipient.rs  rekey.rs  remote.rs  resolver.rs  schema.rs  search.rs  set.rs  share.rs  store_ops.rs  sync.rs  tag.rs  write.rs
rust/src/config/: env_cache.rs  env_dsl.rs  env_resolver.rs  envs_mut.rs  example.yaml  global.rs  mod.rs  project.rs  remote.rs
rust/src/config/outputs/: dsl.rs  mod.rs  outputs_mut.rs  resolver.rs  selector.rs
rust/src/crypto/: age.rs  identity.rs  keystore.rs  mod.rs  secret_value.rs  tags.rs
rust/src/git/: adapter.rs  cli_adapter.rs  in_memory.rs  mod.rs
rust/src/index/: mod.rs  schema.sql
rust/src/keyring/: macos.rs  mod.rs
rust/src/proto/: mod.rs
rust/src/remote/: mod.rs  store.rs
rust/src/tui/: app.rs  event.rs  harness.rs  hint.rs  icons.rs  keymap.rs  layout.rs  mod.rs  terminal.rs  theme.rs  toast.rs
rust/src/tui/forms/: mod.rs
rust/src/tui/model/: mod.rs  path_folding.rs  result_sort.rs
rust/src/tui/views/: command_palette.rs  dashboard.rs  envs.rs  (+15 more)
scripts/: set-version.sh
src/lib/: backend.sh  ci.sh  codegen.sh  common.sh  crypto.sh  group.sh  init.sh  recipient.sh  sops.sh  sync.sh
tests/bats/: crypto.bats  group.bats  init.bats  recipient.bats  test_helper.bash
tests/fixtures/configs/: full-himitsu.yaml  minimal-himitsu.yaml  project-binding.yaml
tests/integration/: cli_test.rs
tui/: bun.nix  default.nix  package.json
tui/src/: app.ts  helpers.ts  himitsu.ts  index.ts  theme.ts
tui/src/views/: dashboard.ts  init-wizard.ts  search.ts  secret.ts
(+12 files in other folders)
