[package]
name = "himitsu"
version = "0.1.0"
edition = "2021"
description = "Age-based secrets management with transport-agnostic sharing"
license = "MIT"

[[bin]]
name = "himitsu"
path = "rust/src/main.rs"

[dependencies]
age = { version = "0.11", features = ["armor"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[test]]
name = "cli_test"
path = "tests/integration/cli_test.rs"
