[package]
name = "himitsu"
version = "0.1.0"
edition = "2021"
description = "Age-based secrets management with transport-agnostic sharing"
license = "MIT"

[[bin]]
name = "himitsu"
path = "rust/src/main.rs"

[dependencies]
age = { version = "0.11", features = ["armor"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "5"
pbjson-types = "0.7"
prost = "0.13"
prost-types = "0.13"

secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
cliclack = "0.3"
figment = { version = "0.10", features = ["env"] }
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.29"
crossterm = "0.28"
arboard = "3"
nucleo-matcher = "0.3"
owo-colors = "4"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[test]]
name = "cli_test"
path = "tests/integration/cli_test.rs"
